@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-21T08:09:38Z",
+  "timestamp" : "2022-11-23T16:08:08Z",
   "count_outdated" : 73,
   "uniques_outdated" : 35,
-  "count" : 77,
-  "uniques" : 39,
+  "count" : 78,
+  "uniques" : 40,
   "views" : [
     {
       "timestamp": "2022-11-15T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-11-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
