@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 5,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-11-15T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-11-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
