@@ -1,3 +1,11 @@
+2022-11-23T16:08:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533732973 # 640
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 35 73 / 39 77
+* notice: next accum: outdated-unq outdated-all / unq all: 35 73 / 40 78
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-23]
+
 2022-11-21T08:09:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3512563285 # 633
 * notice: last 14d: unq all: 4 4
